[package]
name = "alloy-web"
version = "0.1.0"
edition = "2021"
categories = ["cryptography::cryptocurrencies"]
keywords = ["crypto", "ethers", "ethereum", "web3", "wasm", "walletconnect"]

[dependencies]
walletconnect-client = { git = "https://github.com/quay-rs/walletconnect-client" }
serde = { version = "1.0", features = ["derive", "rc"] }
thiserror = "1.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.5"
serde_json = "1.0"
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"
hex = "0.4.3"
qrcode-generator = "4.1.9"
unsafe-send-sync = "0.1.0"
alloy-primitives = "0.5.2"
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy" }
